--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
-data/*
+/data/*
 work_dirs/*
-ckpt/*
+ckpts/*
 __pycache__
 *.png
 *.pyc
-visual/*
-data
-visual
-demo
+/visual/*
+/data
+/visual
+/demo
 demo/*
+/ckpts
